# superintelligence-historical-analysis

./: CMakeLists.txt  LICENSE.md  Llama .prompt.yml  Mesh.cpp  README.md
.github/workflows/: cmake.yml  codeql.yml  defender-for-devops.yml  devskim.yml  main.yml  msvc.yml  stackhawk.yml
